--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Abeer
 logo: assets/images/abeer_logo.png
 show_download: True
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jeky-remote-theme
