--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: assets/images/abeer_logo.png
 show_download: True
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jeky-remote-theme
+- jekyll-remote-theme 
