--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Abeer
 logo: assets/images/abeer_logo.png
-show_download: True
+show_downloads: True
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme 
